# vani-portfolio

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  robots.txt
.github/workflows/: deploy.yml
config/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_alter_contactmessage_message.py  0002_contactmessage_phone.py  0003_remove_contactmessage_phone.py  0004_remove_contactmessage_subject.py
core/: admin.py  apps.py  context_processors.py  models.py  navigation.py  sitemaps.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_sitesettings_options_and_more.py  0002_sitesettings_actress_name_sitesettings_seo_image_and_more.py  0003_sitesettings_phone.py
core/templatetags/: navigation.py
media_app/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
media_app/migrations/: 0001_initial.py  0002_alter_category_options.py  0002_alter_photo_options_alter_video_options_and_more.py  0003_remove_video_youtube_url_video_youtube_id.py  0004_alter_photo_image.py
nginx/: default.conf
pages/: admin.py  apps.py  models.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_article_options_article_about_vani_and_more.py  0002_showreel_alter_about_vani_options_about_article_and_more.py  0003_category_credits.py  0003_remove_article_created_at.py  0004_alter_homepage_options.py  0004_rename_category_credits_category.py  (+16 more)
templates/: base.html
(+32 files in other folders)
